--- a/SherlockHolmescss.css
+++ b/SherlockHolmescss.css
@@ -96,13 +96,14 @@ body {
 .img1{
   position:fixed;
   right: 5px ;
-  bottom: 100px;
-  width: 10%;
+  bottom: 50px;
+  width: 5%;
+  z-index: 1;
 }
 
 .img2{
-width: 50%;
-margin-left: 25%;
+width: 40%;
+margin-left: 30%;
 }
 .img3{
   width: 30%;
@@ -124,18 +125,17 @@ margin-left: 25%;
 }
 
 
-li{
-  list-style: none;
+.ligne{
   text-align: center;
   margin-left: 20px;
-  margin-top: 5px;
+  margin-top: 10px;
   position: relative;
+  font-size:medium ;
 }
 
 .text{
   position: absolute;
   margin-top: 10px;
+  margin-left: 20px;
 }
-.liste{
-  text-align: left;
-}
+
