--- a/SherlockHolmescss.css
+++ b/SherlockHolmescss.css
@@ -70,7 +70,6 @@ body {
 .Contact{
      background-color: rgb( 13, 2, 75);
      color: #eee;
-     margin-bottom: 0%;
      text-align: left;
      z-index: -1;
      border: 2px solid rgb( 13, 2, 75) ;
@@ -91,7 +90,7 @@ body {
   margin-bottom: 50px;
 }
 .espace{
-  margin-top: 500px;
+  margin-top: 50px;
 }
 .img1{
   position:fixed;
@@ -125,11 +124,12 @@ margin-left: 30%;
 }
 
 
+
+
 .ligne{
   text-align: center;
   margin-left: 20px;
   margin-top: 10px;
-  position: relative;
   font-size:medium ;
 }
 
@@ -137,5 +137,33 @@ margin-left: 30%;
   position: absolute;
   margin-top: 10px;
   margin-left: 20px;
+  margin-bottom: 100px;
 }
 
+table{
+  border: 2px solid rgb( 13, 2, 75) ;
+  border-collapse: collapse;
+  width: 75%;
+  text-align: center;
+}
+th{
+  border: 2px solid rgb( 13, 2, 75) ;
+  border-collapse: collapse;
+}
+td{
+  border: 2px solid rgb( 13, 2, 75) ;
+  border-collapse: collapse;
+  top: 0px;
+}
+.petitecase{
+  width: 20%;
+}
+.mediumcase{
+  width: 30%;
+}
+.grandecase{
+  width: 50%;
+}
+.aucentre{
+  margin-left: 25%;
+}
