--- a/SherlockHolmescss.css
+++ b/SherlockHolmescss.css
@@ -136,7 +136,12 @@ margin-left: 30%;
   margin-bottom: 100%;
   z-index: -1;
 }
-
+.img7{
+  width: 30%;
+  position: absolute;
+  margin-left: 750px;
+  z-index: -1;
+}
 .erpara{
   margin-top: 500px;
 }
@@ -185,4 +190,9 @@ td{
 }
 .tailletextp{
   font-size:xx-large ;
+}
+iframe{
+  width: 500px ;
+  height: 250px ;
+  margin-left: 35%;
 }
