--- a/Calendrier.css
+++ b/Calendrier.css
@@ -1,3 +1,21 @@
-div {
-    width: auto;
-}
+ #Titre{
+    color: rgb(0, 0, 0);
+    font-size: 50px;
+    text-align: center;
+ }
+
+ body {
+    color: rgb(0, 0, 0);
+    background-color: white;
+ }
+
+ p{
+    text-align: center;
+ }
+
+ img {
+    width: 50% ;
+    position : relative;
+    left: 25%;
+    margin-top: 50px;
+ }
